--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
         value: 3.10.8
       - key: DEBUG
         value: False
+      - key: ALLOWED_HOSTS
+        value: opposeek.com
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
