--- a/render.yaml
+++ b/render.yaml
@@ -25,6 +25,8 @@ services:
           property: connectionString
       - key: SERPER_API_KEY
         sync: false
+      - key: OPENAI_API_KEY
+        sync: false
 
 databases:
   - name: opposeek-db
