--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,31 @@
 #
 #    pip-compile --no-annotate requirements.in
 #
+aiohttp==3.8.6
+aiosignal==1.3.1
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+beautifulsoup4==4.12.2
 brotli==1.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
 dj-database-url==2.1.0
 django==4.2.7
+frozenlist==1.4.0
 gunicorn==21.2.0
 idna==3.4
+multidict==6.0.4
+openai==0.28.1
 packaging==23.2
 psycopg2==2.9.9
+regex==2023.10.3
 requests==2.31.0
+soupsieve==2.5
 sqlparse==0.4.4
+tiktoken==0.5.1
+tqdm==4.66.1
 typing-extensions==4.8.0
 urllib3==2.0.7
 whitenoise[brotli]==6.6.0
+yarl==1.9.2
